--- a/_config.yml
+++ b/_config.yml
@@ -3,30 +3,31 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: klkkong
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Major in CFD-DEM | Rookie to Data Science
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/Irving.jpg
 
 #
 # Flags below are optional
 #
 
 # Includes an icon in the footer for each username you enter
-footer-links:
+footer-links: 
   dribbble:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: klkkong
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +42,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+        url: https://github.com/klkkong
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
